# 3a-lab-OOOP

./: .gitignore  CMakeLists.txt  ISort.cpp  ISort.h  ParallelMergeSort.cpp  ParallelMergeSort.h  README.md  SequentialMergeSort.cpp  SequentialMergeSort.h  lab2_res.ipynb  main.cpp  merge_sort_parallel.cpp  merge_sort_parallel.h  merge_sort_sequential.cpp  merge_sort_sequential.h  test_sort.cpp
Doxygen documentation/: _parallel_merge_sort_8h_source.html  _sequential_merge_sort_8h_source.html  class_parallel_merge_sort-members.html  hierarchy.html
Doxygen documentation/search/: classes_0.js
docs/: _i_sort_8h.html  _i_sort_8h_source.html  _parallel_merge_sort_8cpp.html  _parallel_merge_sort_8h.html  _parallel_merge_sort_8h_source.html  _sequential_merge_sort_8cpp.html  _sequential_merge_sort_8h.html  _sequential_merge_sort_8h_source.html  annotated.html  class_i_sort-members.html  class_i_sort.html  class_parallel_merge_sort-members.html  class_parallel_merge_sort.html  class_sequential_merge_sort-members.html  class_sequential_merge_sort.html  doxygen_crawl.html  files.html  functions.html  functions_func.html  globals.html  globals_func.html  hierarchy.html  main_8cpp.html  md__r_e_a_d_m_e.html  pages.html
docs/search/: all_5.js  all_9.js  all_a.js  (+15 more)
html/: _i_sort_8h_source.html  _parallel_merge_sort_8h_source.html  annotated.html  class_sequential_merge_sort.html  classes.html
lab3/: lab3.ipynb
lab4/: lab4.ipynb
latex/: _i_sort_8h.tex  _i_sort_8h_source.tex  _parallel_merge_sort_8cpp.tex  _parallel_merge_sort_8h.tex  _parallel_merge_sort_8h_source.tex  _sequential_merge_sort_8cpp.tex  _sequential_merge_sort_8h.tex  _sequential_merge_sort_8h_source.tex  annotated.tex  class_i_sort.eps  class_i_sort.tex  class_parallel_merge_sort.eps  class_parallel_merge_sort.tex  class_sequential_merge_sort.eps  class_sequential_merge_sort.tex  files.tex  hierarchy.tex  main_8cpp.tex  md__r_e_a_d_m_e.tex  refman.tex
